# price-negotiation-rl-env

./: .env.example  README.md  buyer_seller.py  dataset.json  generate_dataset.py  generator.md  pyproject.toml  rewards.py  run_rollout.py  test_seller_model_smoke.py  understanding_dataset.md  utils.py
.prime/: .env-metadata.json  lab.json
configs/rl/: price-negotiation.toml
generators/: base.py  episode.py  generate_dataset.py  helpers.py  llm.py  template.py
outputs/evals/buyer_seller--openai--gpt-4o/38c966fd/: metadata.json  results.jsonl
tests/: test_hf_llm_generator.py
