[project]
name = "buyer-seller"
description = "Multi-turn buyer-seller negotiation environment for verifiers."
tags = ["negotiation", "rl", "train", "eval"]
version = "0.1.4"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "litellm>=1.82.0",
    "verifiers>=0.1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["buyer_seller.py", "rewards.py", "utils.py", "dataset.json", "pyproject.toml"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
